@@ -6,6 +6,7 @@ Here you can see the full list of changes between each release.
 Version 0.3
 -----------
 
+- tasks can be revoked and terminated
 - worker view shows autoscaler options
 - worker view shows worker's PID
 
